Added a timer in clock and which updates the time