@@ -13,7 +13,9 @@ import org.joda.time.format.PeriodFormatter;
 import org.joda.time.format.PeriodFormatterBuilder;
 
 import java.util.ArrayDeque;
+import java.util.ArrayList;
 import java.util.Iterator;
+import java.util.List;
 
 import truckerboys.otto.R;
 
@@ -25,7 +27,10 @@ import truckerboys.otto.R;
 public class ClockView extends Fragment {
     View rootView;
     TextView timeLeft, stopTL1, stopTL2, stopTL3, stopN1, stopN2, stopN3;
-    ArrayDeque<RestStop> stops = new ArrayDeque<RestStop>();
+    //ArrayDeque<RestStop> stops = new ArrayDeque<RestStop>();
+    ArrayList<RestStop> stops = new ArrayList<RestStop>();
+    Boolean variablesSet = false;
+    String timeL;
 
     public ClockView(){
 
@@ -53,6 +58,8 @@ public class ClockView extends Fragment {
         stopN1 = (TextView) rootView.findViewById(R.id.nameStop1);
         stopN2 = (TextView) rootView.findViewById(R.id.nameStop2);
         stopN3 = (TextView) rootView.findViewById(R.id.nameStop3);
+
+        variablesSet = true;
     }
 
     /**
@@ -60,18 +67,20 @@ public class ClockView extends Fragment {
      * @param timeLeft The remaining time
      */
     public void setTimeLeft(Duration timeLeft){
-        this.timeLeft.setText(getTimeAsFormattedString(timeLeft));
+        if(variablesSet) {
+            timeL = getTimeAsFormattedString(timeLeft);
+        }
     }
 
     /**
-     * Add a new reststop to the bottom of the list. If the list is longer than three it removes the closest reststop.
+     * Adds a new reststop to the bottom of the list. If the list is longer than three it removes the closest reststop.
      * @param newRestStop The new reststop
      */
     public void addNewRestStop(RestStop newRestStop){
 
-        stops.addFirst(newRestStop);
+        stops.add(newRestStop);
         if(stops.size()>3){
-            stops.removeLast();
+            stops.remove(stops.size() - 1);
         }
 
         setLabels();
@@ -79,17 +88,38 @@ public class ClockView extends Fragment {
     }
 
     /**
+     * Sets the reststops to the given list of reststops
+     * @param restStops The new RestStops
+     */
+    public void setRestStops(ArrayList<RestStop> restStops){
+        stops = restStops;
+    }
+
+    /**
      * Updates the UI
      */
     public void updateUI(){
-        setLabels();
+
+        if(variablesSet){
+            Runnable updateUI = new Runnable(){
+                public void run(){
+                    setLabels();
+                }
+            };
+            getActivity().runOnUiThread(updateUI);
+        }
     }
 
     /**
      * Sets the labels of the reststops.
      */
     private void setLabels(){
-        Iterator it = stops.descendingIterator();
+        try {
+            timeLeft.setText(timeL);
+        }catch (Exception e){
+            System.out.println("Exception " + e.getMessage());
+        }
+        Iterator it = stops.iterator();
         if(it.hasNext()) {
             RestStop stop = (RestStop) it.next();
             stopTL1.setText(getTimeAsFormattedString(stop.getTimeLeft()));
@@ -123,7 +153,6 @@ public class ClockView extends Fragment {
                 .appendMinutes()
                 .toFormatter();
         String result = minutesAndSeconds.print(period);
-
         return result;
     }
 }
